--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     font-family: "Azeret Mono", serif;
     font-optical-sizing: auto;
 }
+.title{
+    color: rgb(13, 19, 33);
+    font-size: 32px;
+    font-weight: 800;
+    line-height: 37px;
+    letter-spacing: 0%;
+    text-align: center;
+}
 
 /* Nav */
 .nav {
@@ -100,7 +108,7 @@ height: 652px;
     text-align: center;
 }
 
-.web-title{
+/* .web-title{
     color: rgb(13, 19, 33);
     font-size: 32px;
     font-weight: 800;
@@ -109,7 +117,7 @@ height: 652px;
     text-align: center;
   
 
-}
+} */
 
 .web-para{
     color: rgb(13, 19, 33);
@@ -174,8 +182,37 @@ padding: 12px 20px 12px 20px;
 margin-right: 300px;
 }
 
-
-
+.inspiration{
+    margin-top: 50px;
+    margin-right: -100px;
+    margin-left: 200px;
+    width: 850px;
+    height: 240px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.inspiration-title{
+    margin-top: 500px;
+    margin-bottom: 20px;
+    
+}
+.inspiration-para{
+    margin-top: 5px;
+    margin-bottom: 20px;
+    
+}
+.inspiration-video{
+    width: 100%;
+height: 0 auto;
+    box-sizing: border-box;
+    border: 1px solid rgba(13, 19, 33, 0.2);
+    border-radius: 16px;
+    gap: 10;
+padding: 32px;
+    
+}
 
 /* Responsive Web Design */
 
@@ -232,6 +269,16 @@ margin-right: 300px;
     }
     .web-card-btn{
         margin-bottom: 20px;
+    }
+    .inspiration{
+        margin-top: -30px;
+        margin-left:-0px;
+        width: 450px;
+        height: 240px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
    
 }
