--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ padding: 12px 20px 12px 20px;
 margin-right: 300px;
 }
 
+/* inspiration */
 .inspiration{
     margin-top: 50px;
     margin-right: -100px;
@@ -209,11 +210,82 @@ height: 0 auto;
     box-sizing: border-box;
     border: 1px solid rgba(13, 19, 33, 0.2);
     border-radius: 16px;
-    gap: 10;
+    gap: 80;
 padding: 32px;
+margin-bottom: 100px;
     
 }
-
+/* target */
+.target{
+    gap: 80;
+    margin-top: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+margin-left: 144px;
+margin-right: 144px;
+}
+.target-para{
+    margin: 24px 0px;
+    color: rgb(13, 19, 33);
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+margin-bottom: 300px;
+}
+.target-container{
+    margin-top: 20px;
+    width: 300px;
+    height: 250px;
+    border-radius: 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start; 
+    margin: 0px 24px;
+}
+.target-title{
+    color: rgb(13, 19, 33);
+    font-size: 24px;
+    font-weight: 800;
+    line-height: 36px;
+    letter-spacing: 0%;
+    text-align: left;
+    gap: 8;
+    margin-top: -30px;
+}
+.target-icon{
+    gap: 8;
+    width: 56px;
+    height: 56px;
+    margin-bottom: 100px;
+}
+.target-para{
+    color: rgb(13, 19, 33);
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: left;
+opacity: 0.7;
+margin: 8px 0px;
+}
+.target-btn{
+    color: rgb(13, 19, 33);
+    font-size: 16px;
+font-weight: 700;
+line-height: 19px;
+letter-spacing: 0%;
+text-align: left;
+text-decoration-line: underline;
+}
+.target-card{
+    display: grid;
+    grid-template-columns:repeat(4,1fr);
+}
 /* Responsive Web Design */
 
 @media only screen and (max-width:768px)
